--- a/wwwRoot/css/main.css
+++ b/wwwRoot/css/main.css
@@ -11,6 +11,12 @@ body {
 	background-color:#fff;
 	font: 'Lato', arial, sans-serif;
 }
+blockquote {
+  padding: 10px 20px;
+  margin: 0 0 20px;
+  font-size: 17.5px;
+  border-left: 5px solid #e1bee7;
+}
 form #website{ display:none; }
 h1,h2,h3,h4,h5,h6 {
 	color:#9c27bd;
@@ -88,6 +94,12 @@ h1,h2,h3,h4,h5,h6 {
 .dropdown-header {
 	color:#104b86;
 	font-weight:700;
+}
+.dropdown-menu>.active>a, .dropdown-menu>.active>a:focus, .dropdown-menu>.active>a:hover {
+  color: #fff;
+  text-decoration: none;
+  background-color: #9c27bd;
+  outline: 0;
 }
 @media (max-width: 991px) {
     .navbar-header {
